[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Backdrop.png" type="Texture" id=1]
[ext_resource path="res://scripts/GameLogic.gd" type="Script" id=2]
[ext_resource path="res://scenes/Pendulum.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=4]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 397, 559 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 1 )

[node name="LevelOverlay" type="Sprite" parent="."]
position = Vector2( 360, 540 )
z_index = 2

[node name="Pendulum" parent="." instance=ExtResource( 3 )]

[node name="LevelSelect" parent="." instance=ExtResource( 4 )]

[node name="AccuracyContainer" type="Node2D" parent="."]
z_index = 2

[node name="Accuracy" type="Control" parent="AccuracyContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="AccuracyLabel" type="Label" parent="AccuracyContainer/Accuracy"]
margin_left = 307.0
margin_top = 180.0
margin_right = 347.0
margin_bottom = 194.0

[connection signal="done" from="Pendulum" to="." method="_on_Pendulum_done"]
[connection signal="menu" from="Pendulum" to="." method="_on_Pendulum_menu"]
[connection signal="reset" from="Pendulum" to="." method="_on_Pendulum_reset"]
[connection signal="select" from="LevelSelect" to="." method="_on_Control_select"]
